--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
         <h1>Group photos with some college staff</h1>
     </header>
     <main>
-        <ul>
+        <ul class="name">Group Member (sorted by last name)
+            <li>Clauber Ferreira</li>
+            <li>Joyce (Chaoye) Jiang</li>
+            <li>Zoe Morais</li>
+            <li>Thomas Sicard</li>
+        </ul>
+        <ul class="photo">
             <li>Counselling Services
                 <picture>
                     <img src="IMG/492122638.jpg" alt="Counselling Services">
