--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, inital-scale=1">
-    <title>/Selfie-Discovery</title>
+    <title>Selfie-Discovery</title>
     <link href="https://fonts.googleapis.com/css?family=Lora|Oswald" rel="stylesheet">
     <link rel="stylesheet" href="CSS/main.css">
 </head>
