--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                     <img src="IMG/492122638.jpg" alt="Counselling Services">
                 </picture>
             </li>
-            <li>
-                <picture></picture>
+            <li>Student Association
+                <picture>
+                    <img src="IMG/37232407.jpg" alt="Student Association">
+                </picture>
             </li>
             <li>College President
                 <picture>
